--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ pretrained_weights/*.md
 pretrained_weights/docs
 pretrained_weights/liveportrait
 pretrained_weights/liveportrait_animals
+pretrained_weights/insightface
+pretrained_weights/buffalo_l
 
 # Ipython notebook
 *.ipynb
