--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,18 +1,126 @@
-numpy==1.26.4
-pyyaml==6.0.1
-opencv-python==4.10.0.84
-scipy==1.13.1
-imageio==2.34.2
-lmdb==1.4.1
-tqdm==4.66.4
-rich==13.7.1
-ffmpeg-python==0.2.0
-onnx==1.16.1
-scikit-image==0.24.0
+aiofiles==23.2.1
+albucore==0.0.13
 albumentations==1.4.10
-matplotlib==3.9.0
-imageio-ffmpeg==0.5.1
-tyro==0.8.5
+altair==5.4.0
+annotated-types==0.7.0
+anyio==4.4.0
+asgiref==3.8.1
+attrs==24.2.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+contourpy==1.2.1
+cycler==0.12.1
+dnspython==2.6.1
+docstring_parser==0.16
+email_validator==2.2.0
+eval_type_backport==0.2.0
+exceptiongroup==1.2.2
+fastapi==0.112.0
+fastapi-cli==0.0.5
+ffmpeg-python==0.2.0
+ffmpy==0.4.0
+filelock==3.15.4
+flatbuffers==24.3.25
+fonttools==4.53.1
+fsspec==2024.6.1
+future==1.0.0
 gradio==4.37.1
+gradio_client==1.0.2
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.24.5
+humanfriendly==10.0
+idna==3.7
+imageio==2.34.2
+imageio-ffmpeg==0.5.1
+importlib_resources==6.4.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+lazy_loader==0.4
+lmdb==1.4.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+mpmath==1.3.0
+narwhals==1.4.0
+networkx==3.2.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.1.105
+nvidia-nvtx-cu12==12.1.105
+onnx==1.16.1
+onnxruntime-gpu==1.18.0
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+orjson==3.10.7
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+protobuf==5.27.3
+pydantic==2.8.2
+pydantic-settings==2.4.0
+pydantic_core==2.20.1
+pydub==0.25.1
+Pygments==2.18.0
 pykalman==0.9.7
-pillow>=10.2.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.20.0
+ruff==0.5.7
+scikit-image==0.24.0
+scikit-learn==1.5.1
+scipy==1.13.1
+semantic-version==2.10.0
+shellingham==1.5.4
+shtab==1.7.1
+six==1.16.0
+sniffio==1.3.1
+sqlparse==0.5.1
+starlette==0.37.2
+sympy==1.13.2
+threadpoolctl==3.5.0
+tifffile==2024.8.10
+tokenizers==0.12.1
+tomli==2.0.1
+tomlkit==0.12.0
+torch==2.3.0+cu121
+torchaudio==2.3.0+cu121
+torchvision==0.18.0+cu121
+tqdm==4.66.4
+transformers==4.22.0
+triton==2.3.0
+typer==0.12.3
+typing_extensions==4.12.2
+tyro==0.8.5
+tzdata==2024.1
+urllib3==2.2.2
+uvicorn==0.30.6
+uvloop==0.20.0
+watchfiles==0.23.0
+websockets==11.0.3
+zipp==3.20.0
